# akii-project

./: .gitignore  Cargo.toml  README.md  application.nix  deny.toml  flake.nix  shell.nix
.github/workflows/: pull_request_checks.yml
src/: database.rs  handlers.rs  main.rs  model.rs  repository.rs  service.rs
