[package]
name = "akii-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
env_logger = "0.11.3"
log = "0.4.21"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rusqlite = "0.31.0"
serde = "1.0.199"
serde_json = "1.0.116"
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
